Rewrite calcualtor code and squash all bugs

--- a/styles.css
+++ b/styles.css
@@ -50,21 +50,35 @@ body {
 }
 
  .screen {
+    width: 500px;
+
     background-color: rgb(24, 9, 9);
     border: inset #ffffff 4px;
 } 
 
 .display{
-    overflow: scroll;
+    overflow:scroll;
     text-align: right;
     color: #EF1E06;
     text-shadow: 0px -2px 10px;
     letter-spacing: 4px;
     padding: 10px;
-    font-size: auto;
     padding-bottom: 10px;
     font-family: retroFont;
+    opacity: 1;
 }
+.blinking{
+    opacity:0;
+}
+
+.display::-webkit-scrollbar {
+    display: none;
+  }
+
+.display {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 
 .buttons {
     box-shadow: inset 0px 5px 2px rgba(0, 0, 0, 0.478);
@@ -115,7 +129,6 @@ body {
     background-image: url(resources/blue_button.png);
 }
 
-
 .number {
     background-image: url(resources/brown_button.png);
 }
@@ -153,8 +166,4 @@ body {
     letter-spacing: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #f1f1f1;
-}
-
-.displayLetters{
-    color: #069def;
 }
